tests/baselines/reference/recursiveBaseCheck4.errors.txt
tests/cases/compiler/recursiveBaseCheck4.ts(1,7): error TS2506: 'M' is referenced directly or indirectly in its own base expression.
tests/cases/compiler/recursiveBaseCheck4.ts(2,9): error TS2339: Property 'blah' does not exist on type 'M<unknown>'.


==== tests/cases/compiler/recursiveBaseCheck4.ts (2 errors) ====
    class M<T> extends M<string> { }
          ~
!!! error TS2506: 'M' is referenced directly or indirectly in its own base expression.
    (new M).blah;
            ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'M<unknown>'.